examples/test/testpolicy19418.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19418
  namespace: namespace27
spec:
  podSelector:
    matchLabels:
      key24: value19
      key20: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value28
      podSelector:
        matchLabels:
          key40: value19
          key1: value20
